cmake_minimum_required(VERSION 3.16)
project(linux_cpp C CXX)

set(CMAKE_C_STANDARD 11)

link_directories(/usr/lib64/mysql)
link_libraries(mysqlclient)

add_executable(main main.cpp)
add_executable(typeid cpp/others/typeid.cpp)
add_executable(const_usage cpp/const_static/const_usage.cpp)
add_executable(one_operator cpp/override/one_operator.cpp)
add_executable(T01 cpp/template/T01.cpp)
add_executable(T02 cpp/template/T02.cpp)
add_executable(T02Vector cpp/template/T02Vector.cpp)
add_executable(two_operator cpp/override/two_operator.cpp)
add_executable(relation_operator cpp/override/relation_operator.cpp)
add_executable(io_operator cpp/override/io_operator.cpp)
add_executable(plus_plus_operator cpp/override/plus_plus_operator.cpp)
add_executable(assignment_operator cpp/override/assignment_operator.cpp cpp/io/io.cpp cpp/exception/exception.cpp cpp/namespace/namespace.cpp cpp/csignal/csignal.cpp cpp/thread/thread_1.cpp cpp/thread/thread_2.cpp cpp/thread/thread_3.cpp cpp/thread/thread_4.cpp cpp/thread/thread_5.cpp cpp/auto_register/auto_register.cpp cpp/auto_register/static_1.cpp)
add_executable(brace_operator cpp/override/brace_operator.cpp)
add_executable(brace_1_operator cpp/override/brace_1_operator.cpp)
add_executable(pointer_operator cpp/override/pointer_operator.cpp)